--- a/Source/Core.Async/Core.Async.csproj
+++ b/Source/Core.Async/Core.Async.csproj
@@ -5,10 +5,10 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3A81AEDB-C496-4736-81AE-7145064B5894}</ProjectGuid>
+    <ProjectGuid>{34EACD97-C7C9-455D-B091-77DC4D37C42E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KodeKandy</RootNamespace>
+    <RootNamespace>KodeKandy.Core</RootNamespace>
     <AssemblyName>KodeKandy.Core.Async</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
@@ -33,18 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Rex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Threading\TaskEx.cs" />
+    <Compile Include="Rex.cs" />
+    <Compile Include="RexExtensions.cs" />
     <Compile Include="Threading\BackgroundScheduler.cs" />
     <Compile Include="Threading\SynchronisedScheduler.cs" />
+    <Compile Include="Threading\TaskEx.cs" />
     <Compile Include="Threading\UnifiedScheduler.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{8c39cca4-f76c-4ee8-b27d-a0a1ccb91300}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Reactive.Core">
@@ -62,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{8C39CCA4-F76C-4EE8-B27D-A0A1CCB91300}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
