--- a/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
+++ b/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
@@ -52,6 +52,11 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Given_MapDefinition.cs" />
+    <Compile Include="TestEntities\NestedFrom.cs" />
+    <Compile Include="TestEntities\NestedTo.cs" />
+    <Compile Include="TestEntities\SimpleFrom.cs" />
+    <Compile Include="TestEntities\SimpleTo.cs" />
     <Compile Include="TargetClassSchemaTests.cs" />
     <Compile Include="TestEntities\Inheritance\Circle.cs" />
     <Compile Include="TestEntities\Inheritance\CircleDto.cs" />
