--- a/Source/Mapnificent/Mapnificent.csproj
+++ b/Source/Mapnificent/Mapnificent.csproj
@@ -33,22 +33,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Definitions\ConstructionContext.cs" />
-    <Compile Include="Definitions\ConversionDefinition.cs" />
-    <Compile Include="Definitions\ConversionDefinitionBuilder.cs" />
-    <Compile Include="Definitions\MemberDefinitionError.cs" />
-    <Compile Include="Definitions\MemberGetterDefinition.cs" />
-    <Compile Include="Definitions\MapDefinitionBuilder.cs" />
-    <Compile Include="Definitions\MapDefinitionUndefinedMembersException.cs" />
-    <Compile Include="Definitions\MapperSchema.cs" />
-    <Compile Include="Definitions\MemberAccessorDefinition.cs" />
-    <Compile Include="Definitions\MemberBindingDefinition.cs" />
-    <Compile Include="Definitions\MemberBindingDefinitionBuilder.cs" />
-    <Compile Include="Definitions\MemberSetterDefinition.cs" />
-    <Compile Include="Maps\Map.cs" />
-    <Compile Include="Definitions\MapDefinition.cs" />
+    <Compile Include="ConstructionContext.cs" />
+    <Compile Include="ConversionDefinition.cs" />
+    <Compile Include="ConversionDefinitionBuilder.cs" />
+    <Compile Include="Bindngs\MemberBindingDefinitionValidator.cs" />
+    <Compile Include="Bindngs\MemberDefinitionError.cs" />
+    <Compile Include="Bindngs\MemberGetterDefinition.cs" />
+    <Compile Include="MapDefinitionBuilder.cs" />
+    <Compile Include="MapDefinitionUndefinedMembersException.cs" />
     <Compile Include="Mapper.cs" />
-    <Compile Include="MappingType.cs" />
+    <Compile Include="Bindngs\MemberAccessorDefinition.cs" />
+    <Compile Include="Bindngs\MemberBindingDefinition.cs" />
+    <Compile Include="Bindngs\MemberBindingDefinitionBuilder.cs" />
+    <Compile Include="Bindngs\MemberSetterDefinition.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="MappingException.cs" />
+    <Compile Include="ProjectionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToClassSchema.cs" />
   </ItemGroup>
