--- a/Source/Core.Tests/Core.Tests.csproj
+++ b/Source/Core.Tests/Core.Tests.csproj
@@ -58,12 +58,16 @@
     <Compile Include="ExpressionHelpersTests\When_Getting_MemberInfos.cs" />
     <Compile Include="ExpressionHelpersTests\When_Getting_MemberNames.cs" />
     <Compile Include="ExpressionHelpersTests\When_ReverseEnumeratingBinaryPartitions.cs" />
+    <Compile Include="MemberInfoExtensionsTests\Given_Checking_CanRead.cs" />
+    <Compile Include="MemberInfoExtensionsTests\Given_Checking_CanRWrite.cs" />
+    <Compile Include="MemberInfoExtensionsTests\Given_Creating_MemberAccessor.cs" />
+    <Compile Include="TestEntities\ReadWriteTestEntity.cs" />
     <Compile Include="ReflectionHelpersTests\Given_Inspecing_For_Generic_Types.cs" />
     <Compile Include="ReflectionHelpersTests\When_Creating_SafeWeakGetter.cs" />
     <Compile Include="ReflectionHelpersTests\Given_WeakGetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionHelpersTests\Given_WeakSetter.cs" />
-    <Compile Include="ReflectionHelpersTests\When_Getting_MemberInfo_MemberType.cs" />
+    <Compile Include="MemberInfoExtensionsTests\When_Getting_MemberInfo_MemberType.cs" />
     <Compile Include="TestEntities\Shape.cs" />
     <Compile Include="TestEntities\Inner.cs" />
     <Compile Include="TestEntities\Outter.cs" />
@@ -73,6 +77,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="MemberAccessorDefinitionTests\" />
     <Folder Include="RequireTests\" />
   </ItemGroup>
   <ItemGroup>
