Moved binding application logic to binding.

--- a/Source/Mapnificent/Mapnificent.csproj
+++ b/Source/Mapnificent/Mapnificent.csproj
@@ -36,15 +36,15 @@
     <Compile Include="Projections\ConstructionContext.cs" />
     <Compile Include="Projections\Conversion.cs" />
     <Compile Include="Projections\ConversionDefinitionBuilder.cs" />
-    <Compile Include="MemberAccess\BindingDefinitionValidator.cs" />
+    <Compile Include="MemberAccess\BindingValidator.cs" />
     <Compile Include="MemberAccess\MemberDefinitionError.cs" />
     <Compile Include="MemberAccess\FromDefinition.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Projections\MapDefinitionBuilder.cs" />
     <Compile Include="Projections\MapDefinitionUndefinedMembersException.cs" />
     <Compile Include="Mapper.cs" />
-    <Compile Include="MemberAccess\BindingDefinition.cs" />
-    <Compile Include="MemberAccess\BindingDefinitionBuilder.cs" />
+    <Compile Include="MemberAccess\Binding.cs" />
+    <Compile Include="MemberAccess\BindingBuilder.cs" />
     <Compile Include="MemberAccess\ToDefinition.cs" />
     <Compile Include="Projections\Map.cs" />
     <Compile Include="MapnificentException.cs" />
