--- a/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
+++ b/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
@@ -55,9 +55,10 @@
     <Compile Include="MapperTests\Given_Auto_Generated_Map.cs" />
     <Compile Include="MapperTests\Given_Building_Map_With_MapBuilder.cs" />
     <Compile Include="MapperTests\Given_Mapping_With_Inheritance.cs" />
-    <Compile Include="MapperTests\Given_Mapping_With_Polymorphism.cs" />
-    <Compile Include="MapperTests\Given_Setting_Map_Properties.cs" />
+    <Compile Include="MapperTests\Given_PolymorphicMap.cs" />
+    <Compile Include="MapperTests\Given_Setting_ClassMap_Properties.cs" />
     <Compile Include="MapperTests\Given_Mapper.cs" />
+    <Compile Include="MapperTests\Given_Setting_PolymorphicMap_Properties.cs" />
     <Compile Include="MemberBindingDefinitionTests\Given_Creating_MemberBindingDefinition.cs" />
     <Compile Include="MapperTests\Given_Auto_Generated_MapDefinition.cs" />
     <Compile Include="MemberBindingDefinitionTests\Given_Validating_MemberBindingDefinition.cs" />
