--- a/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
+++ b/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="MapperTests\Given_Auto_Generated_Map.cs" />
     <Compile Include="MapperTests\Given_Building_Map_With_MapBuilder.cs" />
+    <Compile Include="MapperTests\Given_ClassMap_Unflattening.cs" />
     <Compile Include="MapperTests\Given_Mapping_With_Inheritance.cs" />
     <Compile Include="MapperTests\Given_PolymorphicMap.cs" />
     <Compile Include="MapperTests\Given_Setting_ClassMap_Properties.cs" />
