--- a/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
+++ b/Source/Mapnificent.Tests/Mapnificent.Tests.csproj
@@ -53,8 +53,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MapperTests\Given_Auto_Generated_Map.cs" />
-    <Compile Include="MapperTests\Given_Building_ClassMap.cs" />
-    <Compile Include="MapperTests\Given_Building_PolymorphicMap.cs" />
+    <Compile Include="BuilderTests\Given_Building_ClassMap.cs" />
+    <Compile Include="BuilderTests\Given_Building_PolymorphicMap.cs" />
     <Compile Include="MapperTests\Given_ClassMap_Unflattening.cs" />
     <Compile Include="MapperTests\Given_Mapping_With_Inheritance.cs" />
     <Compile Include="MapperTests\Given_PolymorphicMap.cs" />
