Adding Unit tests to PropertyChangeSubject.

--- a/Source/Panopticon.Tests/Panopticon.Tests.csproj
+++ b/Source/Panopticon.Tests/Panopticon.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanged_Events.cs" />
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanges.cs" />
     <Compile Include="ObservableObjectTests\Given_Observing_PropertyChanged_Events.cs" />
+    <Compile Include="ObservableObjectTests\Given_PropertyChangeSubject.cs" />
     <Compile Include="ObservableObjectTests\TestObservableObject.cs" />
     <Compile Include="ObservableObjectTests\Given_Observing_PropertyChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
