Added notification suppression to ObservableObject & ObservableList.

--- a/Source/Panopticon.Tests/Panopticon.Tests.csproj
+++ b/Source/Panopticon.Tests/Panopticon.Tests.csproj
@@ -81,10 +81,11 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="CollectionChangeSubjectTests\Given_CollectionChangeSubject.cs" />
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanged_Events.cs" />
     <Compile Include="ObservableListTests\Given_Observing_CollectionChanges.cs" />
     <Compile Include="ObservableObjectTests\Given_Observing_PropertyChanged_Events.cs" />
-    <Compile Include="ObservableObjectTests\Given_PropertyChangeSubject.cs" />
+    <Compile Include="PropertyChangeSubjectTests\Given_PropertyChangeSubject.cs" />
     <Compile Include="ObservableObjectTests\TestObservableObject.cs" />
     <Compile Include="ObservableObjectTests\Given_Observing_PropertyChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
