--- a/Source/Panopticon/Panopticon.csproj
+++ b/Source/Panopticon/Panopticon.csproj
@@ -35,6 +35,10 @@
   <ItemGroup>
     <Compile Include="ImmutableList.cs" />
     <Compile Include="IObservableObject.cs" />
+    <Compile Include="Linq\ObservableImpl\NotifyPropertyChangedLink.cs" />
+    <Compile Include="Linq\ObservableImpl\PropertyObservableFactory.cs" />
+    <Compile Include="Linq\ObservableImpl\ReturnForever.cs" />
+    <Compile Include="Linq\QueryLanguage.cs" />
     <Compile Include="ObservableCommand.cs" />
     <Compile Include="ObservableList.cs" />
     <Compile Include="ObservableObject.cs" />
@@ -83,6 +87,7 @@
       <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
