Removed lots of messy 'spike' code.

--- a/Source/Core.Tests/Core.Tests.csproj
+++ b/Source/Core.Tests/Core.Tests.csproj
@@ -59,15 +59,15 @@
     <Compile Include="ExpressionHelpersTests\When_Getting_MemberNames.cs" />
     <Compile Include="ExpressionHelpersTests\When_ReverseEnumeratingBinaryPartitions.cs" />
     <Compile Include="MemberInfoExtensionsTests\Given_Checking_CanRead.cs" />
-    <Compile Include="MemberInfoExtensionsTests\Given_Checking_CanRWrite.cs" />
+    <Compile Include="MemberInfoExtensionsTests\Given_Checking_CanWrite.cs" />
     <Compile Include="MemberInfoExtensionsTests\Given_Creating_MemberAccessor.cs" />
-    <Compile Include="ReflectionHelpersTests\Given_StrongGetter.cs" />
+    <Compile Include="ReflectionHelpersTests\Given_Building_Strong_Getter.cs" />
     <Compile Include="TestEntities\ReadWriteTestEntity.cs" />
     <Compile Include="ReflectionHelpersTests\Given_Inspecing_For_Generic_Types.cs" />
     <Compile Include="ReflectionHelpersTests\When_Creating_SafeWeakGetter.cs" />
-    <Compile Include="ReflectionHelpersTests\Given_WeakGetter.cs" />
+    <Compile Include="ReflectionHelpersTests\Given_Building_Weak_Getter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReflectionHelpersTests\Given_WeakSetter.cs" />
+    <Compile Include="ReflectionHelpersTests\Given_Building_Weak_Setter.cs" />
     <Compile Include="MemberInfoExtensionsTests\When_Getting_MemberInfo_MemberType.cs" />
     <Compile Include="TestEntities\Shape.cs" />
     <Compile Include="TestEntities\Inner.cs" />
