--- a/Source/Panopticon.PerformanceTests/Panopticon.PerformanceTests.csproj
+++ b/Source/Panopticon.PerformanceTests/Panopticon.PerformanceTests.csproj
@@ -69,7 +69,9 @@
   <ItemGroup>
     <Compile Include="Benchmark.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Given_ObservingObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestEntities\TestObservableObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -84,6 +86,9 @@
       <Project>{cf86e617-096f-472b-80ea-525b7abd21b2}</Project>
       <Name>Panopticon</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Benchmarks.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
