--- a/Source/Panopticon/Panopticon.csproj
+++ b/Source/Panopticon/Panopticon.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CollectionChangedHelper.cs" />
+    <Compile Include="DerivedObservableList.cs" />
     <Compile Include="ImmutableList.cs" />
     <Compile Include="Internal\ImmutableList.cs" />
     <Compile Include="Internal\ImmutableMultiObserver.cs" />
@@ -42,18 +43,19 @@
     <Compile Include="Linq\ObservableImpl\PocoLink.cs" />
     <Compile Include="Linq\ObservableImpl\MemberObservableFactory.cs" />
     <Compile Include="Linq\ObservableImpl\Forever.cs" />
+    <Compile Include="Linq\Opticon.cs" />
     <Compile Include="Linq\QueryLanguage.cs" />
     <Compile Include="ObservableCommand.cs" />
-    <Compile Include="ObservableListNu.cs" />
+    <Compile Include="ObservableList.cs" />
     <Compile Include="NotifyPropertyChangedObservable.cs" />
-    <Compile Include="ObservableObjectNu.cs" />
+    <Compile Include="ObservableObject.cs" />
     <Compile Include="PropertyChangedEventArgsEx.cs" />
     <Compile Include="PropertyChangeHelper.cs" />
     <Compile Include="CollectionChange.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PropertyChange.cs" />
-    <Compile Include="PropertyObserver.cs" />
+    <Compile Include="MarkRx\PropertyChange.cs" />
+    <Compile Include="MarkRx\PropertyObserver.cs" />
     <Compile Include="Internal\WeakEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
